--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
   font-family: 'Inter', sans-serif;
   line-height: 1.6;
-  background-color: #f5f5dc; /* Beige background */
+  background-color:#EDB985
   color: #2c2c2c;
   transition: all 0.3s ease-in-out;
   font-size: 15px;
